--- a/index.html
+++ b/index.html
@@ -184,6 +184,7 @@
                   id="TaiKhoan"
                   class="form-control"
                   placeholder="Nhập vào tài khoản"
+                  oninput="validateAccount()"
                 />
                 <span id="spanTaiKhoan" class="text-danger"></span>
               </div>
@@ -193,7 +194,7 @@
                   id="HoTen"
                   class="form-control"
                   placeholder="Nhập vào họ tên"
-                  pattern=""
+                  oninput="validateName()"
                 />
                 <span id="spanName" class="text-danger"></span>
               </div>
@@ -204,6 +205,7 @@
                   class="form-control"
                   placeholder="Nhập vào mật khẩu"
                   type="password"
+                  oninput="validatePass()"
                 />
                 <span id="spanPass" class="text-danger"></span>
               </div>
@@ -213,7 +215,9 @@
                   id="Email"
                   class="form-control"
                   placeholder="Nhập vào Email"
+                  oninput="validateEmail()"
                 />
+                <span id="spanEmail" class="text-danger"></span>
               </div>  
               <div class="form-group">
                 <label>Hình Ảnh</label>
@@ -221,20 +225,23 @@
                   id="HinhAnh"
                   class="form-control"
                   placeholder="Nhập vào hình ảnh"
+                  oninput="validateImage()"
                 />
+                <span id="spanImage" class="text-danger"></span>
               </div>             
               <div class="form-group">
                 <label for="">Loại Người Dùng: </label>
-                <select class="form-control" id="loaiNguoiDung">
-                  <option>Chọn loại người dùng</option>
+                <select class="form-control" id="loaiNguoiDung" oninput="validateLoaiND()">
+                  <option value="Chọn loại người dùng">Chọn loại người dùng</option>
                   <option value="GV">Giáo viên</option>
                   <option value="HV">Học viên</option>
                 </select>
+                <span id="spanType" class="text-danger"></span>
               </div>
               <div class="form-group">
                 <label for="">Loại Ngôn Ngữ: </label>
-                <select class="form-control" id="loaiNgonNgu">
-                  <option>Chọn ngôn ngữ</option>
+                <select class="form-control" id="loaiNgonNgu" oninput="validateNgonNgu()">
+                  <option value="Chọn ngôn ngữ">Chọn ngôn ngữ</option>
                   <option>ITALIAN</option>
                   <option>FRENCH</option>
                   <option>JAPANESE</option>
@@ -243,11 +250,18 @@
                   <option>SWEDEN</option>
                   <option>SPANISH</option>
                 </select>
+                <span id="spanNgonNgu" class="text-danger"></span>
               </div>
               <div class="form-group">
                 <label>Mô tả</label>
-                <textarea name="" id="MoTa" class="form-control" placeholder="Nhập vào mô tả"></textarea>
-               
+                <textarea 
+                name="" id="MoTa" 
+                class="form-control" 
+                placeholder="Nhập vào mô tả"
+                oninput="validateMoTa()"
+                >
+              </textarea>
+                <span id="spanMoTa" class="text-danger"></span>
               </div>
             </div>
             <!-- Modal footer -->
