--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <!-- BEGIN TÌM KIẾM -->
               <div class="input-group mb-3">
                 <input
-                  id="search"
+                  id="txtSearch"
                   type="text"
                   class="form-control"
                   placeholder="Nhập từ khóa"
