--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
 
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     
-    <script src="../models/product.js"></script>
-    <script src="../services/productAPI.js"></script>
-    <script src="../controllers/main.js"></script>
+    <script src="./app/models/product.js"></script>
+    <script src="./app/services/productAPI.js"></script>
+    <script src="./app/controllers/main.js"></script>
 
   </body>
 </html>
